Inmob-Salesforce/force-app/main/default/objects/Promocion__c/Promocion__c.object-meta.xml
<CustomObject>
    <label>Promoción</label>
    <nameField>
        <label>Nombre de Promoción</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promociones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>