Inmob-Salesforce/force-app/main/default/objects/Promocion__c/fields/CI_Valor__c.field-meta.xml
<CustomField>
    <fullName>CI_Valor__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>