Inmob-Salesforce/force-app/main/default/objects/Promocion__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Código</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>