Inmob-Salesforce/force-app/main/default/objects/Promocion__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripción</label>
    <length>200</length>
    <type>Text</type>
</CustomField>