Inmob-Salesforce/force-app/main/default/objects/Promocion__c/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nivel</label>
    <type>Checkbox</type>
</CustomField>