Inmob-Salesforce/force-app/main/default/objects/Promocion__c/fields/Prescindible__c.field-meta.xml
<CustomField>
    <fullName>Prescindible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prescindible</label>
    <type>Checkbox</type>
</CustomField>