Inmob-Salesforce/force-app/main/default/objects/Promocion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CI_Valor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>patio en aluminio y vidrio</value>
    </filters>
    <label>Todos</label>
</ListView>