Inmob-Salesforce/force-app/main/default/objects/Promocion__c/listViews/Promociones.listView-meta.xml
<ListView>
    <fullName>Promociones</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Prescindible__c</columns>
    <columns>Nivel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>meson de granito</value>
    </filters>
    <label>Promociones</label>
</ListView>